--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-service": "^3.12.0",
     "babel-eslint": "^10.0.1",
     "electron": "^6.0.0",
+    "electron-updater": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-electron-builder": "^1.4.0",
